Backup and Migrate 8.x-4.x-dev, xxxx-xx-xx
------------------------------------------
#3121797 by paulocs, thalles, RenatoG, Neslee Canil Pinto: Update support.source
  link in composer.json.


Backup and Migrate 8.x-4.1, 2019-12-20
--------------------------------------
#2975065 by Dinu Rodnitchi, Alex Andrascu: Add encryption support.
#3041404 by DamienMcKenna: Add CHANGELOG.txt.
#2947276 by liliancatanoi90, rajeshwari10, minakshiPh, Elaman, emartoni,
  DamienMcKenna, alonaoneill: Missing module help.
#2947219 by bryrock, PhilY, Alex Andrascu: Timestamp no more uses site timezone.
#2962548 by mattshoaf, Alex Andrascu: Depends on Core Entity module.
#2992448 by Pasqualle, riddhi.addweb: Warning after install.
#2935402 by DamienMcKenna, ikit-claw: Further improve coding standards
  compliance.
#2935402 by DamienMcKenna: Further improve coding standards compliance.
#3028984 by i-trokhanenko, Roman Dyn: Replace deprecated REQUEST_TIME.
#2925371 by tibezh: Usable menu items in Administration menu.
#2950887 by liliancatanoi90: Admin menu item is missing a description.
#3013182 by RoshniPatel.addweb: 'label' key defined twice for
  backup_migrate.profile.* config_entity schema in backup_migrate.schema.yml.
#3047223 by DamienMcKenna: Temporarily remove NodeSquirrel integration.
#3047798 by trustypelletgun, cosmicdreams: Corrected typo in MySQLi extension
  error message.
#3053127 by DamienMcKenna, JonMcL: Added README.md note about the new B&M
  Flysystem module.
#2998626 by frob, DamienMcKenna, JonMcL: Bad logic halts functionality if the
  uncompressed file is too large.
#3006542 by ashlewis, DamienMcKenna, cl.choong, jacklee0410, maki3000, TedWS:
  Failed to connect to MySQL server.


Backup and Migrate 8.x-4.0, 2018-03-29
--------------------------------------
#2937840 by hugronaphor: Avoid "Unable to find the wrapper "private"" error.


Backup and Migrate 8.x-4.0-rc1, 2018-02-21
------------------------------------------