@@ -2,6 +2,8 @@ Backup and Migrate 8.x-4.x-dev, xxxx-xx-xx
 ------------------------------------------
 #3121797 by paulocs, thalles, RenatoG, Neslee Canil Pinto: Update support.source
   link in composer.json.
+#3104422 by peterkokot, DamienMcKenna: PHP 7.4 deprecated reverse order of glue
+  and pieces in implode.
 
 
 Backup and Migrate 8.x-4.1, 2019-12-20
